specify code and samp
Some code tags were replaced with samp and some got a class=lang-* attribute to specify which language was being used.

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 			<li><time>2020-08-07</time> Changed the links in the footer with the icons of the respective site</li>
 			<li><time>2020-08-07</time> Details (those clickable things with the ▶ symbol) can now be mass opened via a button</li>
 			<li><time>2020-08-07</time> Removed <q>Regex Explanation</q>, as it was too simple for my current knowledge. Maybe I'll revive it in an article</li>
-			<li><time>2020-08-07</time> Improved <q>Slugify</q>; it now removed duplicate <code>-</code>'s.</li>
+			<li><time>2020-08-07</time> Improved <q>Slugify</q>; it now removed duplicate <samp>-</code>'s.</li>
 			<li><time>2020-08-06</time> Added <q>Information for a secret project</q> to the Knowledge Base</li>
 			<li><time>2020-08-04</time> Improved <q>404 Not Found</q> page</li>
 			<li><time>2020-08-04</time> Changed the <q>Article</q> page into an actual list</li>
@@ -182,11 +182,11 @@
 			<li><time>2020-05-09</time> Added <abbr title="Mocking Spongebob Text Generator"><q>MSTG</q></abbr> project</li>
 			<li><time>2020-05-09</time> Added <q>ROT13</q> project</li>
 			<li><time>2020-05-09</time> Added history images, for Thaumatorium.com and a SON experiment, to the repo (but not the site)</li>
-			<li><time>2020-05-09</time> Added extension recommendations for when you open the <code>thaumatorium.github.io</code> folder (for when you download the repo)</li>
+			<li><time>2020-05-09</time> Added extension recommendations for when you open the <samp>thaumatorium.github.io</samp> folder (for when you download the repo)</li>
 			<li><time>2020-05-03</time> Replaced the bare <q>Elm</q> version of this site with the static HTML - including some easter eggs :^)</li>
 			<li>Between these times I've read the <a href="https://html.spec.whatwg.org/multipage/"><q>HTML Living Standard</q></a> and most of the <a href="https://www.w3.org/TR/CSS/#css"><q>CSS spec</q></a> (that's CSS 2.1 + the separate 'blocks' that either replace or add to CSS 2.1 - that's CSS 3, basically)</li>
 			<li><time>2019-10-24</time> Got the <q>Elm</q> version of the site working</li>
-			<li><time>2019-09-27</time> Creation of the repo that hosts this site with a very simple static <code>index.html</code></li>
+			<li><time>2019-09-27</time> Creation of the repo that hosts this site with a very simple static <samp>index.html</samp></li>
 		</ul>
 
 		<h2 id=todo>
@@ -195,7 +195,8 @@
 		</h2>
 		<p>The date you see is <q>date created</q>, not <q>edited</q> or <q>done</q></p>
 		<ul>
-<li><time>2020-08-14</time> Figure out how Qwibus Amersfoort has their nav menu on Google</li>
+			<li><time>2020-08-14</time> rewrite the <q>Quick 'n dirty Big O</q> article. I think I've outgrown it.</li>
+			<li><time>2020-08-14</time> Figure out how Qwibus Amersfoort has their nav menu on Google</li>
 			<li><time>2020-08-11</time> Create an "htmlest" page, that contains *all* HTML elements, in a sensible way. Ofcourse add a ton of comments to explain the element names (like dt, dl, etc)</li>
 			<li><time>2020-08-10</time> Create World of Warcraft TODO so I can plan the things I still want to do/play/find</li>
 			<li><time>2020-08-08</time> Move Changelog and TODO to their own pages, but keep the top 5 or so on the FP.</li>
@@ -205,7 +206,7 @@
 			<li><time>2020-08-04</time> Add FB/Twitter metadata to all other pages, especially the Template page.</li>
 			<li><time>2020-08-04</time> Add canonical links to all other pages (other than the frontpage).</li>
 			<li><time>2020-08-04</time> Create an article where I explain how I created this site. Use keywords to improve the pull to this site.</li>
-			<li><time>2020-08-04</time> Add meta tag for keywords to each page. <code>&lt;meta name="keywords" content="Keyword1, Keyword2, Keyword3"&gt;</code> At the very least it won't hurt.</li>
+			<li><time>2020-08-04</time> Add meta tag for keywords to each page. <code class=lang-html>&lt;meta name="keywords" content="Keyword1, Keyword2, Keyword3"&gt;</code> At the very least it won't hurt.</li>
 			<li><time>2020-08-03</time> Create a Twitch addon that shows a counted and then sorted list of emotes from chat: [12x LULW, 6x LUL, 4x Pogey, 4x KKomando, 4xlowZ, 1x asmonMcCool]</li>
 			<li><time>2020-08-03</time> Write an article that explains recursion, without using the word recursion: "How to loop without the for loop construct [RECURSION GONE WILD]"</li>
 			<li><time>2020-07-30</time> Write software reviews: Go in-depth into software. Don't just "oh you can do xyz". What are some neat features/options you can find deep in the depths of the menus? I can call it "Let's talk about X"</li>
@@ -227,20 +228,20 @@
 				<li><time>2020-07-13</time> <del>Improve the Issue page on GitHub by adding a template.</del></li>
 				<li><time>2020-07-29</time> <del>Make some svg images for the footer links</del></li>
 				<li><time>2020-07-15</time> <del>Create a knowledge page and move certain articles into it - certain articles are just too short to be a separate page, IMO.</del></li>
-				<li><time>2020-07-13</time> <del>move the <code>id</code> from the <code>h2/h3</code> into the <code>&lt;section&gt;</code> elements - this should improve the semantics of <code>&lt;section&gt;</code>, IMO.</del></li>
-				<li><time>2020-07-07</time> <del>Add <code>&lt;a href="#todo" class="self-link"&gt;&lt;/a&gt;</code> to basically all headers.</del></li>
+				<li><time>2020-07-13</time> <del>move the <code class=lang-html>id</code> from the <code class=lang-html>h2/h3</code> into the <code class=lang-html>&lt;section&gt;</code> elements - this should improve the semantics of <code class=lang-html>&lt;section&gt;</code>, IMO.</del></li>
+				<li><time>2020-07-07</time> <del>Add <code class=lang-html>&lt;a href="#todo" class="self-link"&gt;&lt;/a&gt;</code> to basically all headers.</del></li>
 				<li><time>2020-07-03</time> <del>Consider Google Analytics - probably not though</del></li>
 				<li><time>2020-07-06</time> <del>Figure out why code block is invisible :(</del> <ins>gotta use &amp;lt; and &amp;gt; for HTML</ins></li>
 				<li><time>2020-07-06</time> <del>Verify that posts on Facebook/Twitter/Reddit look good</del> <ins>dey look good!</ins></li>
 				<li><time>2020-07-06</time> <del>Fix the PWA functionality - if I update the HTML, it won't update the page on the client side</del></li>
 				<li><time>2020-07-06</time> <del>Figure out how to update pages on the client side after an update</del></li>
 				<li><time>2020-07-01</time> <del>Redo the CSS - mobile looks weird</del> <ins>Already (mostly) fixed it, without rewrite</ins></li>
-				<li><time>2020-07-01</time> <del>If you go to <code>#starfield</code>, via <code>#projects</code>, the starfield won't show</del></li>
+				<li><time>2020-07-01</time> <del>If you go to <code class=lang-html>#starfield</code>, via <code class=lang-html>#projects</code>, the starfield won't show</del></li>
 				<li><time>2020-05-09</time> <del>Put each article/blog in a separate file</del></li>
 				<li><time>2020-05-09</time> <del>Make it able to switch main article</del></li>
 				<li><time>2020-05-09</time> <del>Make thaumatorium.com functional</del></li>
 				<li><time>2020-05-09</time> <del>I broke the browser history (clicking back doesn't "refresh" the page) 😭</del></li>
-				<li><time>2020-05-09</time> <del>Add brightness and color to the <code>starfield</code></del></li>
+				<li><time>2020-05-09</time> <del>Add brightness and color to the <samp>starfield</samp></del></li>
 				<li><time>2020-05-09</time> <del>Make articles look a bit better</del></li>
 				<li><time>2020-05-09</time> <del>Turn the main tags into articles and stick them all into a &lt;main&gt;, perhaps that gets the layout working</del></li>
 				<li><time>2020-05-09</time> <del>Center the main content</del></li>
@@ -289,7 +290,7 @@
 				const showCrypto = () => {
 					document.querySelectorAll(".crypto").forEach(el => el.style.display = "none")
 					let val = document.getElementById("cryptotype").value;
-					document.getElementById(val).style.display="";
+					document.getElementById(val).style.display = "";
 				}
 			</script>
 
