--- a/pages/about.html
+++ b/pages/about.html
@@ -80,7 +80,7 @@
 		<p>After learning the creator wasn't the... most cooperating of persons I decided to move on before even clashing with him.</p>
 		<p>I quickly found the Blazor beta, which seemed promising, especially in the PWA department. Downsides: the output is rather huge (4MB+ in size) and the code is based on the Mono lib, not the fastest of libs.</p>
 		<p>So I ended up thinking: What's left after removing <em>all and anything</em> bloat? HTML. CSS. JS... So why not create my site in that? So I set out to create a PWA - a single HTML page that contains the whole site.</p>
-		<p>The site quickly grew too big for this, so I changed it up by splitting the site in separate HTML pages, but <code>index.html</code> contained the generic header/footer HTML, while the other HTML files contained the articles.</p>
+		<p>The site quickly grew too big for this, so I changed it up by splitting the site in separate HTML pages, but <samp>index.html</samp> contained the generic header/footer HTML, while the other HTML files contained the articles.</p>
 		<p>In doing so - splitting the site, but mostly handling things like a PWA - I broke the back/forward buttons and browser history...</p>
 		<p>In the end I decided in writing just separate HTML pages, which means I have a bunch of duplicate HTML, but I'm OK with that, as I know enough R<sup>E</sup>G<sub>E</sub>X to edit <em>all</em> HTML headers in one fell swoop!</p>
 		<h3 id=what-else>
