add syntax highlighting option to Big O article
I have to figure out how to generalize it for the site.

--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
 		<p>Initially things changed too drastically and too fast to keep a changelog, but I think it's time for one.</p>
 		<p>Everything previous the creation of this list has been copied from the Git history.</p>
 		<ul>
+			<li><time>2020-08-15</time> Added (optional) syntax highlighting for Haskell in the <q>Quick 'n Dirty Big O</q> article</li>
 			<li><time>2020-08-07</time> Comment section on the front page is now hidding behind a button to improve load times.</li>
 			<li><time>2020-08-07</time> Removed <q>Online tools that I regularly use</q>, because you can find that information in the Knowledge Base</li>
 			<li><time>2020-08-07</time> Changed the links in the footer with the icons of the respective site</li>
@@ -195,6 +196,7 @@
 		</h2>
 		<p>The date you see is <q>date created</q>, not <q>edited</q> or <q>done</q></p>
 		<ul>
+			<li><time>2020-08-15</time> Figure out how to generalize the syntax highlighting from the Big O article.</li>
 			<li><time>2020-08-14</time> rewrite the <q>Quick 'n dirty Big O</q> article. I think I've outgrown it.</li>
 			<li><time>2020-08-14</time> Figure out how Qwibus Amersfoort has their nav menu on Google</li>
 			<li><time>2020-08-11</time> Create an "htmlest" page, that contains *all* HTML elements, in a sensible way. Ofcourse add a ton of comments to explain the element names (like dt, dl, etc)</li>
