fill in the current year with dummy letters; Last updated is now filled with dummy data
I used to use a real date, but I'd better use underscores as placeholders for both.

--- a/pages/praetorianpi.html
+++ b/pages/praetorianpi.html
@@ -64,9 +64,9 @@
 	<footer>
 		<div class=copyright>
 			©<a href="https://www.youtube.com/watch?v=czgOWmtGVGs" style="text-decoration: none; color: #800;">12019</a>
-			– <a id=target-year href="http://updateyourfooter.com/" style="text-decoration: none; color: #800;"></a>,
+			– <a id=target-year href="http://updateyourfooter.com/" style="text-decoration: none; color: #800;">120__</a>,
 			<abbr title="Copyright is implicit, almost anywhere in the world! If you want to know more, wikipedia 'Berne Convention'" style="text-decoration: none; color: #800;">Thaumatorium</abbr>
-			<p><sub>Last updated: <time id=updated>2020-07-03</time></sub></p>
+			<p><sub>Last updated: <time id=updated>2020-__-__</time></sub></p>
 		</div>
 		<nav id=profiles>
 			<p>Media profiles</p>
