--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
 		</h2>
 		<p>The date you see is <q>date created</q>, not <q>edited</q> or <q>done</q></p>
 		<ul>
+			<li><time>2020-08-15</time> Write a script for a World of Warcraft guide for beginners. Pros/cons of races. Pros/cons of classes (and specialties). Settings you want to look at. What else? Check /r/wownoob for inspiration. Tip: Don't just write text. Describe the scene too.</li>
 			<li><time>2020-08-15</time> Figure out how to generalize the syntax highlighting from the Big O article.</li>
 			<li><time>2020-08-14</time> rewrite the <q>Quick 'n dirty Big O</q> article. I think I've outgrown it.</li>
 			<li><time>2020-08-14</time> Figure out how Qwibus Amersfoort has their nav menu on Google</li>
