Make title of / slightly shorter
Gotta stay within 60 chars!

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<!-- For more information: https://www.w3.org/International/questions/qa-html-encoding-declarations#nonutf8 -->
 	<meta charset=utf-8 />
 	<!-- The title of the tab -->
-	<title>The Thaumatorium: NostraDavid's handcrafted articles and projects</title>
+	<title>The Thaumatorium: NostraDavid's handcrafted website</title>
 	<!-- This description should show up in Google results -->
 	<meta name=description content="This is a handcrafted blog where you can find articles and projects created by NostraDavid." />
 	<!-- <base href="https://thaumatorium.com/" /> -->
