move the html files out of the /pages folder into /
Not sure why I ever stuck them in there.

--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
 	<nav>
 		<a href="/">Frontpage</a><span> - </span>
 		<a href=/articles>Articles</a><span> - </span>
-		<a href=/pages/projects.html>Projects</a><span> - </span>
-		<a href=/pages/experimentations.html>Experimentations</a><span> - </span>
-		<a href=/pages/code-of-conduct.html>Code of Conduct</a><span> - </span>
-		<a href=/pages/random-video.html>Random video</a><span> - </span>
-		<a href=/pages/hardware.html>Hardware</a><span> - </span>
-		<a href=/pages/knowledge-base.html>Knowledge Base</a><span> - </span>
-		<a href=/pages/about.html>About</a>
+		<a href=/projects.html>Projects</a><span> - </span>
+		<a href=/experimentations.html>Experimentations</a><span> - </span>
+		<a href=/code-of-conduct.html>Code of Conduct</a><span> - </span>
+		<a href=/random-video.html>Random video</a><span> - </span>
+		<a href=/hardware.html>Hardware</a><span> - </span>
+		<a href=/knowledge-base.html>Knowledge Base</a><span> - </span>
+		<a href=/about.html>About</a>
 	</nav>
 
 	<main>
@@ -121,7 +121,7 @@
 		<p>This is my handcrafted website, where I write articles and post my projects.</p>
 		<p>Note that this site is pure uncompressed HTML/CSS/JS, with some PNG and WEBP images to fluff thing up. I like to think that <strong>this is how the web is supposed to be</strong>. This site is (for now) a collection of static pages instead of built up by some (C#/JS/PHP/Java) framework.</p>
 		<p>Everything is handcrafted and <em>not</em> minified, something that's usually the case, so if you want to figure out how something works, you can just go and check it out - right click on something and then click "Inspect".</p>
-		<p>If you want to know more about this site, check out the <a href="/pages/about.html">About</a> page.</p>
+		<p>If you want to know more about this site, check out the <a href="/about.html">About</a> page.</p>
 
 		<h2 id=top-articles>
 			<a href="#top-articles" class="self-link"></a>
