--- a/index.html
+++ b/index.html
@@ -113,10 +113,7 @@
 		<p>Everything is handcrafted and <em>not</em> minified, something that's usually the case, so if you want to figure out how something works, you can just go and check it out - right click on something and then click "Inspect".</p>
 		<p>If you want to know more about this site, check out the <a href="/about.html">About</a> page.</p>
 
-		<h2 id=top-articles>
-			<a href="#top-articles" class="self-link"></a>
-			Top articles
-		</h2>
+		<h2><a id=top-articles href="#top-articles" class="self-link">Top articles</a></h2>
 		<ul>
 			<li><a href=/articles/im-sick-of-all-the-negative-content-on-reddit.html>Here is how I fixed the broken system that is Reddit</a></li>
 			<li><a href=/articles/haskells-fold-functions-explained.html>Haskell's fold functions explained</a></li>
@@ -125,10 +122,7 @@
 			<li><a href=/articles/quick-n-dirty-big-o.html>Quick 'n Dirty Big O: A short introduction into Big O</a></li>
 		</ul>
 
-		<h2 id=changelog>
-			<a href="#changelog" class="self-link"></a>
-			Changelog
-		</h2>
+		<h2><a id=changelog href=#changelog class=self-link>Changelog</a></h2>
 		<p>Important changes and when they happened.</p>
 		<p>Initially things changed too drastically and too fast to keep a changelog, but I think it's time for one.</p>
 		<p>Everything previous the creation of this list has been copied from the Git history.</p>
@@ -180,10 +174,7 @@
 			<li><time>2019-09-27</time> Creation of the repo that hosts this site with a very simple static <samp>index.html</samp></li>
 		</ul>
 
-		<h2 id=todo>
-			<a href="#todo" class="self-link"></a>
-			TODO
-		</h2>
+		<h2><a id=todo href=#todo class=self-link>TODO</a></h2>
 		<p>The date you see is <q>date created</q>, not <q>edited</q> or <q>done</q></p>
 		<ul>
 			<li><time>2020-08-15</time> Write a script for a World of Warcraft guide for beginners. Pros/cons of races. Pros/cons of classes (and specialties). Settings you want to look at. What else? Check /r/wownoob for inspiration. Tip: Don't just write text. Describe the scene too.</li>
@@ -246,15 +237,8 @@
 			</ul>
 		</details>
 
-		<h2 id=support>
-			<a href="#support" class="self-link"></a>
-			Support
-		</h2>
-
-		<h3 id=support-ko-fi>
-			<a href="#support-ko-fi" class="self-link"></a>
-			Ko-fi
-		</h3>
+		<h2><a id=support href=#support class=self-link>Support</a></h2>
+		<h3><a id=support-ko-fi href=#support-ko-fi class=self-link>Ko-fi</a></h3>
 
 		<figure>
 			<a href=https://ko-fi.com/J3J61VMSC rel=noopener target=_blank>
@@ -263,21 +247,13 @@
 			<figcaption>Why yes, that <em>is</em> a custom Ko-fi button,<br> based on one that <a href="https://www.ko-fi.com/img/githubbutton_sm.svg">Ko-fi provided</a>,<br> but optimized AF. Why do you ask?</figcaption>
 		</figure>
 
-		<h3 id=support-hyvor>
-			<a href="#support-hyvor" class="self-link"></a>
-			Hyvor comment section
-		</h3>
-
+		<h3><a id=support-hyvor href=#support-hyvor class=self-link>Hyvor comment section</a></h3>
 		<figure>
 			<p>Want to use the same style of comments for your site?</p>
 			<p>Use my <a href="https://talk.hyvor.com?aff=5844">referral link</a> to sign up! <em>If</em> you then pay Hyvor 30% will be passed onto me!</p>
 		</figure>
 
-		<h3 id=support-crypto>
-			<a href="#support-crypto" class="self-link"></a>
-			Crypto
-		</h3>
-
+		<h3><a id=support-crypto href=#support-crypto class=self-link>Crypto</a></h3>
 		<p>
 			<script>
 				const showCrypto = () => {
@@ -334,10 +310,7 @@
 			<p class=crypto-address>DHbW72pYTog8GnuugZ1UXib5YmEv8ws4Ba</p>
 		</figure>
 
-		<h2 id=comments>
-			<a href="#comments" class="self-link"></a>
-			Comments
-		</h2>
+		<h2><a id=comments href=#comments class=self-link>Comments</a></h2>
 		<div>
 			<button type=button onclick="showComments()">Show comments</button>
 			<button type=button onclick="hideComments()">Hide comments</button>
