--- a/hardware.html
+++ b/hardware.html
@@ -45,10 +45,7 @@
 	<main>
 		<!-- https://lowko.tv/setup/ -->
 		<h1>NostraDavid's Computer hardware and general setup</h1>
-		<h2 id=zeus-2019>
-			<a href="#zeus-2019" class="self-link"></a>
-			Zeus (2019)
-		</h2>
+		<h2><a id=zeus-2019 href=#zeus-2019 class=self-link>Zeus (2019)</a></h2>
 		<p>Zeus (the strongest of gods) is my current computer and main machine.</p>
 		<p>I currently use it for programming this site and playing vidya gaems.</p>
 		<table>
@@ -97,10 +94,7 @@
 				</tr>
 			</tbody>
 		</table>
-		<h2 id=selene-2013>
-			<a href="#selene-2013" class="self-link"></a>
-			Selene (2013)
-		</h2>
+		<h2><a id=selene-2013 href=#selene-2013 class=self-link>Selene (2013)</a></h2>
 		<p>Selene (named after the moon) was my old PC and currently functions as backup server (even though it's an old desktop PC)</p>
 		<p>I used to play games on this machine, but it got <em>very</em> frustrating as PUBG (which I played at the time) ran terrible, even on low settings, as the devs kept adding effects which I couldn't disable.</p>
 		<table>
@@ -149,10 +143,7 @@
 				</tr>
 			</tbody>
 		</table>
-		<h2 id=hyperion-2016>
-			<a href="#hyperion-2016" class="self-link"></a>
-			Hyperion (2016)
-		</h2>
+		<h2><a id=hyperion-2016 href=#hyperion-2016 class=self-link>Hyperion (2016)</a></h2>
 		<p>Hyperion (named after the sun) is my current laptop and I bought it one at the start of my Bachelor's (HBO, for the Duchies) and it has served me well!</p>
 		<p>Right now it serves as third monitor and is being controlled by Zeus' keyboard and mouse, via a program called <a href="https://github.com/debauchee/barrier#barrier">Barrier</a>, as Synergy turned into a paid product a few years ago</p>
 		<p>It's an <a href="https://tweakers.net/pricewatch/484153/asus-zenbook-pro-ux501vw-fj024t/specificaties/">Asus Zenbook Pro UX501VW-FJ024T</a> - you can find more under Zenbook UX501VW, but FJ024T is the specific one I have.</p>
