--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 		<p>If you want to know more about this site, check out the <a href="/about.html">About</a> page.</p>
 
 		<h2><a id=top-articles href="#top-articles" class="self-link">Top articles</a></h2>
-		<ul>
+		<ul class=article-list>
 			<li><a href=/articles/im-sick-of-all-the-negative-content-on-reddit.html>Here is how I fixed the broken system that is Reddit</a></li>
 			<li><a href=/articles/haskells-fold-functions-explained.html>Haskell's fold functions explained</a></li>
 			<li><a href=/articles/spark-files-and-taking-notes.html>Spark files and keeping track of your ideas, concepts & thoughts</a></li>
