--- a/projects.html
+++ b/projects.html
@@ -47,8 +47,8 @@
 		<h1>NostraDavid's' programming projects</h1>
 
 		<div>
-			<button type=button onclick="document.querySelectorAll(`details`).forEach(el => {el.open = true});">Open all chapters</button>
-			<button type=button onclick="document.querySelectorAll(`details`).forEach(el => {el.open = false});">Close all chapters</button>
+			<button class=button type=button onclick="document.querySelectorAll(`details`).forEach(el => {el.open = true});">Open all chapters</button>
+			<button class=button type=button onclick="document.querySelectorAll(`details`).forEach(el => {el.open = false});">Close all chapters</button>
 		</div>
 
 		<details>
